--- a/real-time-collaboration-comments-outside-of-editor-for-react/public/index.html
+++ b/real-time-collaboration-comments-outside-of-editor-for-react/public/index.html
@@ -10,6 +10,7 @@ This file is licensed under the terms of the MIT License (see LICENSE.md).
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="./style.css" rel="stylesheet" type="text/css">
+	<link href="./editor_content.css" rel="stylesheet" type="text/css">
 	<link rel="icon" type="image/png" href="https://c.cksource.com/a/1/logos/ckeditor5.png">
 </head>
 
